@@ -2342,6 +2342,51 @@ class TestParamDocChecker(CheckerTestCase):
         with self.assertNoMessages():
             self.checker.visit_functiondef(node)
 
+    @set_config(no_docstring_rgx="")
+    def test_skip_empty_docstring_rgx(self) -> None:
+        """Example of a function that matches an empty 'no-docstring-rgx' config option
+
+        No error message is emitted.
+        """
+        node = astroid.extract_node(
+            """
+        #pylint disable=missing-module-docstring, too-few-public-methods,
+
+        class MyClass:
+            def __init__(self, my_param: int) -> None:
+                '''
+                My init docstring
+                :param my_param: My first param
+                '''
+        """
+        )
+        with self.assertNoMessages():
+            self.checker.visit_functiondef(node.body[0])
+
+    @set_config(no_docstring_rgx="")
+    def test_fail_empty_docstring_rgx(self) -> None:
+        """Example of a function that matches an empty 'no-docstring-rgx' config option
+
+        An error message is emitted.
+        """
+        node = astroid.extract_node(
+            """
+        #pylint disable=missing-module-docstring, too-few-public-methods,
+
+        class MyClass:
+            def __init__(self, my_param: int) -> None:
+                '''
+                My init docstring
+                '''
+        """
+        )
+        with self.assertAddsMessages(
+            MessageTest(
+                msg_id="missing-param-doc", node=node.body[0], args=("my_param",)
+            ),
+        ):
+            self.checker.visit_functiondef(node.body[0])
+
     @set_config(docstring_min_length=3)
     def test_skip_docstring_min_length(self) -> None:
         """Example of a function that is less than 'docstring-min-length' config option
