@@ -57,6 +57,10 @@ Release date: TBA
 
 * Fixed regex options not correctly converting to regex patterns
 
+* Fixed empty ``no_docstring_rgx`` option not being checked correctly
+
+   Closes #4136
+
 
 What's New in Pylint 2.11.1?
 ============================
